--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,8 @@
     "php": "^8.0|^8.1|^8.2|^8.3|^8.4",
     "ext-json": "*",
     "laravel/framework": "^9.0|^10.0|^11.0|^12.0",
-    "laravel/nova": "^4.0",
-    "nova-kit/nova-packages-tool": "^1.3.1"
+    "laravel/nova": "^4.0|^5.0",
+    "nova-kit/nova-packages-tool": "^1.3.1|^2.0"
   },
   "autoload": {
     "psr-4": {
